[package]
name = "advent_of_code"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
ndarray = "0.15.6"
regex = "1.10.2"
rayon = "1.8.0"
roots = "0.0.8"
num = "0.4.1"
memoize = "0.4.1"
ansi-hex-color = "0.1.1"
geo = "0.27.0"
